  darshan-job-summary.pl (reported by Matthieu Dorier)
* Clean up autoconf test for zlib and make zlib mandatory (reported by Kalyana
  Chadalavada)
* add --start-group and --end-group notation to Darshan libraries for Cray PE
  2.x environment to fix link-time corner cases (Yushu Yao)
* improve y axis labels on time interval graphs in darshan-job-summary.pl
  (reported by Tomo Peterka)

darshan-2.3.0
=============
* Fix incorrect version numbering in darshan-runtime component of Darshan
  2.2.9, reported by Jean-Guillaume Piccinali

darshan-2.2.9
=============
* Bug fixes:
  - Fix mnt table overflow if a large number of file systems are mounted, 
    reported by David Shrader.
  - Fix argument parsing for darshan-convert, reported by Mouhamed Gueye.
  - Fix metadata annotation overflow in darshan-convert, reported by 
    Mouhamed Gueye.
  - Fix const-correctness in dynamic library when built against MPI 3.x
    libraries.
  - Fix "undefined symbol: dlsym" error when using preloaded dynamic library
    on some platforms, reported by Florin Isaila.
  - Normalize timestamps to always be relative to MPI_Init().
  - Better library name matching in compiler wrappers to handle more MPICH
    variations on Blue Gene systems.
  - Fixed header dependency problems when using darshan-logutils.h in external
    programs (Shane Snyder).
* Enhancements:
  - Add support (both in documentation and in provided module files) for
    Cray PE 2.x.
  - Honor CC variable to allow darshan-util to be built with other compilers
    besides gcc.
  - Update documentation to clarify the interaction between rpath and
    LD_PRELOAD when instrumenting dynamic libraries, issue reported and
    investigated by Davide Del Vento.
  - Ability to disable shared-file reduction by setting the
    DARSHAN_DISABLE_SHARED_REDUCTION environment variable.
  - More thorough output from darshan-parser --perf, suggested by Huong Luu.
  - Increased metadata annotation room from 64 bytes to 1KiB in header.